<resources>
    <string name="app_name">Quero Pizza!</string>
    <string name="label_dados_cliente">Dados do cliente</string>
    <string name="label_escolha">Escolha a(s) pizza(s)</string>
    <string name="label_atum">Atum</string>
    <string name="label_bacon">Bacon</string>
    <string name="label_mussarela">Mussarela</string>
    <string name="label_calabresa">Calabresa</string>
    <string name="label_broto">Broto</string>
    <string name="label_media">Média</string>
    <string name="label_grande">Grande</string>
    <string name="label_forma_pagamento">Forma de pagamento</string>

    <string name="credito">Cartão de crédito</string>
    <string name="debito">Cartão de débito</string>
    <string name="vr">Vale refeição</string>
    <string name="fiado">Fiado</string>
    <string name="cupom">Cupom</string>
    <string name="label_button_calcular">Calcular</string>

    <string name="saudacao">Olá %1$s. seu número de contato é %2$s.</string>

</resources>
