<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".ui.main.MainActivity">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ui.main.MainActivity">

        <TextView
            style="@style/label_titulo"
            android:text="@string/label_dados_cliente" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            tools:text="Fulano"
            style="@style/margin_lateral"
            android:id="@+id/tvNome"
            />


        <TextView
            style="@style/label_titulo"
            android:text="@string/label_escolha" />

        <LinearLayout style="@style/container_horizontal">

            <CheckBox
                style="@style/checkbox_pizza"
                android:text="@string/label_atum" />

            <CheckBox
                style="@style/checkbox_pizza"
                android:text="@string/label_bacon" />
        </LinearLayout>

        <LinearLayout style="@style/container_horizontal">

            <CheckBox
                style="@style/checkbox_pizza"
                android:text="@string/label_mussarela" />

            <CheckBox
                style="@style/checkbox_pizza"
                android:text="@string/label_calabresa" />
        </LinearLayout>

        <TextView
            style="@style/label_titulo"
            android:text="Tamanho da pizza" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                style="@style/radio_button"
                android:text="@string/label_broto" />

            <RadioButton
                style="@style/radio_button"
                android:text="@string/label_media" />

            <RadioButton
                style="@style/radio_button"
                android:text="@string/label_grande" />
        </RadioGroup>

        <TextView
            style="@style/label_titulo"
            android:text="@string/label_forma_pagamento" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/formas_de_pagamento" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/botao_personalizado"
            android:text="@string/label_button_calcular"
            android:textColor="#FFFFFF" />

    </LinearLayout>

</ScrollView>